...
                        style: TextStyle(
                            color: Colors.black,
                            fontSize: 18,
                            fontWeight: FontWeight.bold,
                            fontFamily: 'TypoRound')),
                    Text(emotionToPick.toUpperCase(),
                        key: Key("emotion-to-pick"),
                        style: TextStyle(
                            shadows: [
                              Shadow(
                                  // bottomLeft
                                  offset: Offset(-1, -1),
                                  color: Colors.black),
...
    generateRandomFaces(emotionOptions);
  }

  Key emotionIsAnswer(int index) {
    switch (index) {
      case 1:
        return Key((emotion1 == emotionToPick) ? "answer" : "incorrect1");
      case 2:
        return Key((emotion2 == emotionToPick) ? "answer" : "incorrect2");
      case 3:
        return Key((emotion3 == emotionToPick) ? "answer" : "incorrect3");
      case 4:
        return Key((emotion4 == emotionToPick) ? "answer" : "incorrect4");
      default:
        return Key("wrong index");
    }
  }
}

