...
                      fontWeight: FontWeight.bold,
                      fontSize: 25,
                      color: globalColours.baseColour),
                ),
                actions: [
                  IconButton(
                    key: Key("sign-out"),
                    onPressed: () {
                      showDialog(
                          context: context,
                          builder: (context) => AlertDialog(
                                shape: RoundedRectangleBorder(
                                    borderRadius: BorderRadius.circular(15)),
...
                                actions: [
                                  TextButton(
                                      key: Key("stay-signed-in-option"),
                                      onPressed: () => Navigator.pop(context),
                                      child: Text("No")),
                                  TextButton(
                                      key: Key("sign-out-option"),
                                      onPressed: () {
                                        _auth.signOut();
                                        Navigator.pop(context);
                                      },
                                      child: Text("Sign out"))
                                ],
...
